--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ button:hover {
 }
 
 .sort-btn .arrow-up {
-  border-bottom: 6px solid green;
+  border-bottom: 6px solid yellow;
 }
 
 .sort-btn .arrow-down {
@@ -506,5 +506,22 @@ canvas#priceChart {
 
 .notification-btn:hover {
     background-color: #0056b3;
+}
+
+.back-btn {
+  background-color: transparent; /* 배경색 제거 */
+  font-size: 30px;
+  color: gray; /* 글자색을 어두운 회색으로 설정 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  cursor: pointer; /* 커서 포인터로 변경 */
+  font-weight: bold; /* 글자 두껍게 */
+  padding: 10px 15px; /* 패딩 */
+  transition: background-color 0.3s ease, transform 0.2s ease; /* 전환 효과 */
+  margin-bottom: 20px; /* 아래쪽 여백 추가 */
+}
+
+.back-btn:hover {
+  background-color: #f0f0f0; /* 호버 시 연한 회색 배경 */
+  transform: scale(1.05); /* 호버 시 크기 증가 */
 }
 
